[project]
name = "teaching-tracinginstrument"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hong3nguyen", email = "tringuyennht@gmail.com" }
]
dependencies = [
    "flask>=3.0.3",
    "opentelemetry-distro>=0.48b0",
    "pip>=24.2",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/teaching_tracinginstrument"]
