[project]
dependencies = [
    "requests",
    "numpy",
    "pillow>=11.0.0",
    "PyYAML",
    "aiohttp>=3.11.11",
    "locust>=2.33.0",
]
name = "client"
version = "0.1.0"
requires-python = "== 3.10.12"


[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true
