[project]
name = "teaching-tracingmanual"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hong3nguyen", email = "tringuyennht@gmail.com" }
]
dependencies = [
    "pip-audit>=2.7.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/teaching_tracingmanual"]
